modificacion de menu

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -30,12 +30,16 @@
             </div>
         </div>
 
-        </div>
+        
         <div class="menu_grid">
             <ul class="botones_grid">
                 <li><a class="menu_boton" href="../index.html">Inicio</a></li>
-
+                <li><a class="menu_boton" href="../pages/sucursales.html">Sucursales</a></li>
+                <li><a class="menu_boton" href="../pages/menu.html">Menú</a></li>
+                <li><a class="menu_boton" href="../pages/ubicacion.html">Ubicación</a></li>
+                <li><a class="menu_boton" href="../pages/contacto.html">Contacto</a></li>
             </ul>
+        </div>
     </header>
     <main>
         <div>
