modifiqué el menú en horizontal, excepto en el index

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,14 +30,14 @@
             </div>
         </div>
 
-        <div class="menu_grid">
-            <ul class="botones_grid">
-                <li><a class="menu_boton" href="../index.html">Inicio</a></li>
-                <li><a class="menu_boton" href="../pages/sucursales.html">Sucursales</a></li>
-                <li><a class="menu_boton" href="../pages/menu.html">Menú</a></li>
-                <li><a class="menu_boton" href="../pages/ubicacion.html">Ubicación</a></li>
-                <li><a class="menu_boton" href="../pages/contacto.html">Contacto</a></li>
-            </ul>
+        <div class="menu_grid2">
+            
+            <a class="menu_boton" href="../index.html">Inicio</a>
+            <a class="menu_boton" href="../pages/sucursales.html">Sucursales</a>
+            <a class="menu_boton" href="../pages/menu.html">Menú</a>
+            <a class="menu_boton" href="../pages/ubicacion.html">Ubicación</a>
+            <a class="menu_boton" href="../pages/contacto.html">Contacto</a>
+            
         </div>
 
     </header>
