--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Oleo+Script:wght@400;700&family=Yanone+Kaffeesatz:wght@200..700&display=swap"
         rel="stylesheet">
 
-    <title>La Mejor | Home</title>
+    <title>La Mejor 10 | Home</title>
 </head>
 
 <body>
